# sm64

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pico_sdk_import.cmake  setup_git_repo.ps1  setup_git_repo.sh
.github/workflows/: build.yml
lib/g722_codec/: CMakeLists.txt  g722_codec.h  g722_decode.c  g722_encode.c
src/: asha_audio.h  asha_bt.h  asha_led.cpp  asha_led.h  asha_logging.cpp  asha_logging.h  btstack_config.h  hearing_aid.h  main.cpp  usb_audio_defs.h  usb_descriptors.cpp  usb_descriptors.h
